[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/HealthUIManager.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Robot_generique.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Robots/Enemy-type-1/Robot1-all-sprites.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Robot1_sounds.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Flash.gdshader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=19]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/whiten = false

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 4, 2, 1, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/death/node = SubResource( 14 )
states/death/position = Vector2( 319, 177 )
states/idle/node = SubResource( 6 )
states/idle/position = Vector2( 179, 89 )
states/walk/node = SubResource( 7 )
states/walk/position = Vector2( 370, 49 )
transitions = [ "walk", "idle", SubResource( 10 ), "idle", "walk", SubResource( 11 ), "idle", "death", SubResource( 15 ), "walk", "death", SubResource( 16 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="Robot_generique" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="HealthUI" type="Node2D" parent="."]
position = Vector2( 2, -12 )
script = ExtResource( 1 )

[node name="RobotArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RobotArea"]
position = Vector2( 2, 11 )
scale = Vector2( 0.40625, 1.0957 )
polygon = PoolVector2Array( -24.6154, -17.3861, -24.6154, -2.78361, 14.7692, -2.78361, 14.7692, -17.3861 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 2, 11 )
scale = Vector2( 0.40625, 1.0957 )
polygon = PoolVector2Array( -24.6154, -17.3861, -24.6154, -2.78361, 14.7692, -2.78361, 14.7692, -17.3861 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 19 )
texture = ExtResource( 3 )
hframes = 7
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/death = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )

[node name="MovingTimer" type="Timer" parent="."]
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="Robot1_sounds" parent="." instance=ExtResource( 4 )]

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="RecoveryTimer" to="." method="_on_RecoveryTimer_timeout"]
